--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
+
 <body>
     <div class="container border mt-5">
-        <div class="row justify-content-between my-10">
-            <h1 class="col-4 ">Lista de Usuários</h1>
-            <button type="button" class="btn btn-success col-4 btn-small"><i class="fas fa-plus"></i> Novo Usuário</button>
+        <div class="d-grid d-flex justify-content-md-between align-items-center">
+            <h1 class=" ">Lista de Usuários</h1>
+            <div class="w-25 input-group">
+                <button type="button" class="btn btn-outline-secondary"><i
+                        class="fas fa-search btn-outline-secondary"></i></button>
+                <input type="text" class="form-control" placeholder="Pesquisar" aria-label="Pesquisar">
+            </div>
+            <button type="submit" class="btn btn-success h-25"><i class="fas fa-plus"></i> Novo Usuário</button>
         </div>
         <table class="table table-bordered table-striped table-hover">
             <thead>
@@ -27,39 +33,15 @@
             <tbody id="user-list">
             </tbody>
         </table>
+        <form id="addUserForm">
+            <input type="text" id="nomeUser" placeholder="Nome">
+            <input type="number" id="idadeUser" placeholder="Idade">
+            <input type="email" id="emailUser" placeholder="email@email.com">
+            <button type="submit" class="btn btn-success"><i class="fas fa-plus"></i> Novo Usuário</button>
+        </form>
     </div>
-    <script>
-        const url = 'http://localhost:8080/users'; 
 
-        function getUsers() {
-            axios.get(url)
-                .then(response => {
-                    let users = response.data;
-                    const userList = document.getElementById('user-list');
-                    users = JSON.parse(users)
-                    console.log(typeof users);
-
-                    users.forEach(user => {
-                        const row = document.createElement('tr');
-                        row.innerHTML = `
-                            <td>${user.nome}</td>
-                            <td>${user.idade}</td>
-                            <td>${user.email}</td>
-                            <td class="text-center"><a>
-                                <i class="fas fa-edit text-warning"></i>
-                                &nbsp;
-                                <i class="fas fa-trash text-danger"></i>
-                            </a></td>
-                        `;
-                        userList.appendChild(row);
-                    });
-                })
-                .catch(error => {
-                    console.error('Erro ao obter os usuários:', error);
-                });
-        }
-        document.addEventListener('DOMContentLoaded', getUsers);
-    </script>
+    <script src="app.js"></script>
 </body>
 
 </html>
