:sparkles: feat: Inserindo a funcao de editar

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
             <input type="number" id="idadeUser" placeholder="Idade">
             <input type="email" id="emailUser" placeholder="email@email.com">
             <button type="submit" class="btn btn-success"><i class="fas fa-plus"></i> Novo Usuário</button>
+            <button type="button" onclick="atualizarUsuario()" class="btn btn-primary">Editar</button>
         </form>
     </div>
 
