:lipstick: feat: Modal para excluir usuario

--- a/index.html
+++ b/index.html
@@ -68,6 +68,25 @@
         </div>
     </div>
 
+    <!-- Deletar um usuário -->
+    <div class="modal fade" id="modalDeletarUsuario">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Deletar usuário</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <p id="txtDeletarUsuario"></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger" id="confirmarExclusao">Excluir</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="app.js"></script>
 </body>
 
