--- a/index.html
+++ b/index.html
@@ -68,6 +68,38 @@
         </div>
     </div>
 
+    <!-- Modal para editar informações do usuário -->
+    <div class="modal fade" id="modalEditar">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Editar informações</h4>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="formEditar" >
+                        <div>
+                            <label for="unomeEditar" class="form-label">Nome</label>
+                            <input type="text" id="unomeEditar" class="form-control" placeholder="Digite o nome">
+                        </div>
+                        <div class="my-3">
+                            <label for="uidadeEditar" class="form-label">Idade</label>
+                            <input type="number" id="uidadeEditar"class="form-control" placeholder="Digite a idade">
+                        </div>
+                        <div>
+                            <label for="uemailEditar" class="form-label">Email</label>
+                            <input type="email" id="uemailEditar" placeholder="email@email.com" class="form-control">
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Fechar</button>
+                    <button type="submit" class="btn btn-primary" onclick="atualizarUsuario()">Salvar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- Deletar um usuário -->
     <div class="modal fade" id="modalDeletarUsuario">
         <div class="modal-dialog">
